--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,8 @@
 PORT=8787
 SERPER_API_KEY=
+API_TOKEN=
 SEARCH_ENABLED=true
+FETCH_URL_ENABLED=true
 AI_ENABLED=false
 AI_PROVIDER=ollama
 OLLAMA_HOST=http://localhost:11434
